Added info to why altrusight, cleaned up some css

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -54,6 +54,59 @@
     </div>
     <div class="whyAltrusight">
         <h2>Why Altrusight?</h2>
+        <p class="whyMessage">Our
+            objective is to create a proof-of-concept website that pulls information on multiple non-profits
+            with the help of an API. These non-profits will be displayed on our web-application and they
+            will be separated into two categories, verified and not verified. Non-verified non-profits will
+            simply have their information displayed on the web-application, however, they will not be
+            considered ‘legitimate’. Theoretically, in order for a non-profit to be labeled as verified, a
+            non-profit representative would have to request for the non-profit to be registered as legitimate.
+            Ideally, the government would then run a rigorous background check on the non-profit in order
+            to ensure its legitimacy, and if this is proven to be true, the non-profit would then be labeled as
+            ‘verified’. The web-application would then let users donate to ‘verified’ non-profits and the
+            non-profit representative would have more control as to the type of information that the
+            non-profit posts on their site.
+            </p>
+            <p class="whyMessage">This would provide donors with a centralized system that they can use for transparency, as well
+                as for analytics. Creating a centralized system for nonprofits would make it easier for donors to
+                choose the right nonprofit to donate to as the amount of research they would have to conduct
+                would be reduced. The website could also have social media like functionality in that users can
+                comment, share, and like nonprofit organizations that appeal to them the most. This would
+                provide a layer of transparency as users would have one place where they can comment on the
+                nonprofits’ use of funds and whether the nonprofit is staying true to its mission. This website
+                could also provide users with analytics such as providing reports or graphs that help visualize
+                how a nonprofit is distributing its funds.
+            </p>
+            <p class="whyMessage">Since the goal of this website would be to provide more transparency about how nonprofits
+                spend their funds, our website would provide information such as who is giving to nonprofits and
+                potentially how much (showing how much a user donated could be an option that the user
+                controls). Doing so would reduce illegal behavior and make money laundering more difficult as
+                a centralized system for nonprofits would make it easier to track the donations going into a
+                nonprofit.
+            </p>
+            <p class="whyMessage">Ultimately, our objective is to create a system that makes it easier to hold nonprofits accountable
+                and makes it easier for donors to see how their donations are being put to use. In theory, all
+                nonprofits would have to register to our system as it would be government regulated, and
+                nonprofits would have to undergo a rigorous background check before being registered to our
+                website. This would provide donors with a sense of security as no fraudulent organizations
+                would be registered to our website and every nonprofit would follow a general format for
+                providing useful information such as ending bank balances, balance sheets, or a generalization of
+                how money is to be spent.
+            </p>
+            <p class="whyMessage">Layered on top of our goal to provide donor transparency and analytics into non-profit usage of
+                donations is also the functionality to make the act of donation a public and shareable event.
+                Humans, at our core, are social creatures, so other human beings tend to have an influence on our
+                personal decisions. We want to leverage this into a live feed of public donations, complete with
+                customized captions for the donations, which will bring a new level of information to a donor’s
+                fingertips, as well as ideally encouraging people to donate more. We also want to provide the
+                ability to integrate personal goals and analytics for an individual’s personal donations, similar to
+                the functionality of many budgeting/spending tracker applications.
+            </p>
+    </div>
+    <div class="proposal">
+        <h2><a href="https://cpb-us-e1.wpmucdn.com/wordpressua.uark.edu/dist/d/609/files/2019/04/Capstone-I-Final-Proposal.pdf"
+            target="_blank">
+        Check out our project proposal!</a></h2>
     </div>
 
     <div class="footer">
