--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -11,17 +11,6 @@
         display: block;
         .member {
             padding-left:30px;
-            .memberName {
-                color:$primary-off-black;
-                text-decoration: none;
-                font-size:12pt;
-                display:inline;
-                font-weight: 500;
-                transition-duration: 0.4s;
-            }
-            .memberName:hover {
-                color:$accent-4;
-            }
             .memberBio {
                 padding-left:25px;
             }
@@ -43,6 +32,17 @@
         margin-left: auto;
         margin-right: auto;
         display: block;
+        .whyMessage {
+            padding-left:30px;
+        }
+    }
+    .proposal {
+        width: 85%;
+        padding: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+
     }
     .footer {
         width:100%;
@@ -62,3 +62,15 @@
         }
     }
 } 
+
+a {
+    color:$primary-off-black;
+    text-decoration: none;
+    font-size:12pt;
+    display:inline;
+    font-weight: 500;
+    transition-duration: 0.4s;
+}
+a:hover {
+    color:$accent-4;
+}
