--- a/src/app/nonprofit-search-page/nonprofit-search-page.component.html
+++ b/src/app/nonprofit-search-page/nonprofit-search-page.component.html
@@ -1,5 +1,13 @@
     <div class="nonprofits-container">
         <h1 class="title">Nonprofit Search Page</h1>
+            <ng-container *ngIf="nonprofitOrganizations.length == 0">
+                <div class="loading-screen">
+                    <div class="loading-spinner">
+                        <mat-spinner>
+                        </mat-spinner>
+                    </div>
+                </div>
+            </ng-container>
             <mat-list class="nonprofit-list-container">
                 <mat-list-item *ngFor="let nonprofit of getNonprofits(pageEvent)" (click)="navigateToNonprofit(nonprofit.ein)" class="nonprofit-list-item">{{nonprofit.charityName}}</mat-list-item>
             </mat-list>
