--- a/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
+++ b/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
@@ -5,6 +5,17 @@
     text-align: center;
 }
 
+.loading-screen {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    .loading-spinner {
+        display: flex;;
+        margin: auto;
+    }
+}
+
+
 .nonprofits-container {
     height: 100%;
     display: flex; 
