--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .loading-screen {
     position:absolute;
     top:0;
@@ -7,8 +9,9 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: #FBFAF5;
+    background-color: $primary-1;
     z-index: 10;
+    opacity: 0.85;
     
     .loading-spinner {
         display: flex;;
