added spending efficiency percentage, couldn't find how to access leadership compensation. will return to this later.

--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -332,16 +332,18 @@
             </mat-card-content>
         </mat-card>
 
-        <mat-card class="compensation-card">
-            <mat-card-content>
-                <p class="card-title">Top Compensation</p>
-                <mat-list>
-                    <mat-list-item>1. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
-                    <mat-list-item>2. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
-                    <mat-list-item>3. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
-                </mat-list>
-            </mat-card-content>
-        </mat-card>
+        <!-- TODO: READD once we find out how to get leadership compensation programmatically
+            <mat-card class="compensation-card">
+                <mat-card-content>
+                    <p class="card-title">Top Compensation</p>
+                    <mat-list>
+                        <mat-list-item>1. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
+                        <mat-list-item>2. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
+                        <mat-list-item>3. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</mat-list-item>
+                    </mat-list>
+                </mat-card-content>
+            </mat-card>
+        -->
 
         <mat-card class="more-stats-card">
             <button mat-button>
