--- a/src/app/user/profile-page/profile-page.component.html
+++ b/src/app/user/profile-page/profile-page.component.html
@@ -1,40 +1,89 @@
 <div class="main-container">
+    <div class="profilePic-container">
+        <img class="profilePic" mat-card-avatar src="{{getProfilePictureURL()}}"/>
+    </div>
     <h1 class="title">Welcome, {{username}}</h1>
-    <div class="row">
-        <div class="col1">
-            <!--TODO: open specific settings when clicked -->
-            <h2 class="subtitle">Account Settings</h2>
-            <div class="account-settings">
-                <div class="account-settings-edit-profile">
-                    <p>Edit Profile</p>
-                </div>
-                <div class="account-settings-payment-methods">
-                    <p>Payment Methods</p>
-                </div>
-                <div class="account-settings-privacy">
-                    <p>Privacy</p>
-                </div>
-                <div class="account-settings-notifications">
-                    <p>Notifications</p>
-                </div>
+    
+    <br>
+
+    <div class="settings">
+        <h2 class="subtitle">Settings</h2>
+        <mat-list class="settingsList">
+            <mat-list-item>
+                <button class="settingsButton" id="logoutButton" mat-menu-item (click)="this.authService.logout()">
+                    Logout
+                </button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <!-- TODO: make these buttons lead where they should-->
+            <mat-list-item>
+                <button class="settingsButton" id="editProfile" mat-menu-item (click)="helloWorld">
+                    Edit Profile
+                </button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <button class="settingsButton" id="paymentMethods" mat-menu-item (click)="helloWorld">
+                    Payment Methods
+                </button>
+            </mat-list-item>
+          </mat-list>
+    </div>
+    <div class="donation-history">
+        <h2 class="subtitle">Donation History</h2>
+        <mat-card class="donationHistoryCards" *ngFor="let donations of getDonations()">
+            <mat-card-header>
+                <mat-card-title>  
+                    <span class="paymentFeedTitleNotImportant"> You donated ${{donations.donationAmount}} to </span> 
+                    <span class="paymentFeedTitleNonprofitName">{{donations.donationCharityName}}</span> 
+                    <span class="paymentFeedTitleDonationAmount"> on {{donations.donationDate}}</span>
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="paymentFeedCardDescription">
+                {{donations.donationDescription}}
+            </mat-card-content>
+        </mat-card>
+    </div>
+    
+
+</div>
+
+<!--
+<div class="main-container">
+    <h1 class="title">Welcome, {{username}}</h1>
+    <div class="col1">
+        <h2 class="subtitle">Account Settings</h2>
+        <div class="account-settings">
+            <div class="account-settings-edit-profile">
+                <p>Edit Profile</p>
             </div>
-        </div>
-        <div class="col2">
-            <h2 class="subtitle">Donation History</h2>
-            <div class="donation-history">
-                <mat-card class="donationHistoryCards" *ngFor="let donations of getDonations()">
-                    <mat-card-header>
-                        <mat-card-title> <!-- TODO, make it so clicking charityname takes you to its page -->
-                            <span class="paymentFeedTitleNotImportant"> You donated ${{donations.donationAmount}} to </span> 
-                            <span class="paymentFeedTitleNonprofitName">{{donations.donationCharityName}}</span> 
-                            <span class="paymentFeedTitleDonationAmount"> on {{donations.donationDate}}</span>
-                        </mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content class="paymentFeedCardDescription">
-                        {{donations.donationDescription}}
-                    </mat-card-content>
-                </mat-card>
+            <div class="account-settings-payment-methods">
+                <p>Payment Methods</p>
+            </div>
+            <div class="account-settings-privacy">
+                <p>Privacy</p>
+            </div>
+            <div class="account-settings-notifications">
+                <p>Notifications</p>
             </div>
         </div>
     </div>
+    <div class="col2">
+        <h2 class="subtitle">Donation History</h2>
+        <div class="donation-history">
+            <mat-card class="donationHistoryCards" *ngFor="let donations of getDonations()">
+                <mat-card-header>
+                    <mat-card-title> <!-- TODO, make it so clicking charityname takes you to its page 
+                        <span class="paymentFeedTitleNotImportant"> You donated ${{donations.donationAmount}} to </span> 
+                        <span class="paymentFeedTitleNonprofitName">{{donations.donationCharityName}}</span> 
+                        <span class="paymentFeedTitleDonationAmount"> on {{donations.donationDate}}</span>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="paymentFeedCardDescription">
+                    {{donations.donationDescription}}
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
 </div>
+-->
