pull favorites from firebase

--- a/src/app/user/favorite-nonprofits/favorite-nonprofits.component.html
+++ b/src/app/user/favorite-nonprofits/favorite-nonprofits.component.html
@@ -2,7 +2,7 @@
     <div class="favorites-container">
         <h1 class="title">Your Favorited Nonprofits</h1>
         <mat-list class="nonprofit-favorited-container">
-            <mat-list-item *ngFor="let nonprofit of getNonprofits(pageEvent)" (click)="navigateToNonprofit(nonprofit.ein)" class="nonprofit-favorited-item">{{nonprofit.charityName}}</mat-list-item>
+            <mat-list-item *ngFor="let nonprofit of getNonprofits(pageEvent)" (click)="navigateToNonprofit(nonprofit)" class="nonprofit-favorited-item">{{nonprofit}}</mat-list-item>
         </mat-list>
     </div>
 </div>
