--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,7 +17,6 @@
         display: flex; 
         flex-direction: column;
         flex: 1 0 0;
-        background-image: linear-gradient(to bottom right, $primary-1, $accent-2, $primary-1);
         .altViewNavigation {
             display: flex;
             align-self: center;
@@ -71,7 +70,7 @@
                     align-self: center;
                     width: 350px;
                     height: 0.1px;
-                    background-color: grey;
+                    background-color: silver;
                 }
                 .mission {
                     line-height: 25px;
