--- a/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
+++ b/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
@@ -2,6 +2,8 @@
 
 
 .title {
+    color: $primary-off-white;
+    font-weight: bold;
     text-align: center;
 }
 
@@ -20,21 +22,24 @@
     height: 100%;
     display: flex; 
     flex-direction: column;
-    background-color: $primary-2;
+    background-color: $accent-3;
     margin: 0 5% 0 5%;
     .nonprofit-list-container {
         display: flex;
         flex-direction: column;
         flex: 1 1 500px;
         .nonprofit-list-item:hover {
-            background-color: $primary-1;
+            background-color: $accent-4;
             cursor: pointer;
         }
         .nonprofit-list-item {
+            color: $primary-off-white;
+            font-size: 20px;
+            line-height: 20px;
             flex: 1 1 50px;
         }
     }
     .nonprofit-paginator {
-        background-color: $primary-2;
+        background-color: $accent-4;
     }
 }
