--- a/src/app/user/favorite-nonprofits/favorite-nonprofits.component.scss
+++ b/src/app/user/favorite-nonprofits/favorite-nonprofits.component.scss
@@ -32,4 +32,18 @@
         margin: 0 5% 0 5%;
         background-color: $accent-4;
     }
+    .logged-out-display {
+        display: flex;
+        flex: 1 1 500px;
+        background-color: $accent-3;
+        margin: 5% 10% 5% 10%; 
+        justify-content: center;
+        align-items: center;     
+        border-radius: 25px;
+        .text {
+            color: $primary-off-white;
+            line-height: 30px;
+            font-size: 30px;
+        } 
+    }
 }
