--- a/src/app/user/profile-page/profile-page.component.scss
+++ b/src/app/user/profile-page/profile-page.component.scss
@@ -18,7 +18,12 @@
         .settingsButton {
             background:none;
             border:none;
-            
+        }
+        #logoutButton:hover {
+            color:$accent-4;
+        }
+        #logoutButton {
+            font-weight:600;
         }
     }
     .profilePic-container {
