beginning of trying to pull in al donations

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,13 +88,13 @@
             <mat-card class="paymentFeedCards" *ngFor="let donations of getDonations()">
                 <mat-card-header>
                     <mat-card-title>
-                        <span class="paymentFeedTitleUsername">{{donations.donorName}}</span> 
+                        <span class="paymentFeedTitleUsername">{{donations.cardHolderName}}</span> 
                         <span class="paymentFeedTitleNotImportant"> donated to </span> 
-                        <span class="paymentFeedTitleNonprofitName" (click)="navigateToNonprofit(donations.donationCharityName)">{{donations.donationCharityName}}</span> 
+                        <span class="paymentFeedTitleNonprofitName" (click)="navigateToNonprofit(donations.orgEIN)">{{donations.orgName}}</span> 
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="paymentFeedCardDescription">
-                    {{donations.donationDescription}}
+                    {{Default Donation Description
                 </mat-card-content>
                 <mat-card-actions class="paymentFeedCardActions">
                     <button mat-button>LIKE</button>
