added payment feed stuff and routing from profile page

--- a/src/app/user/profile-page/profile-page.component.html
+++ b/src/app/user/profile-page/profile-page.component.html
@@ -42,7 +42,7 @@
             <mat-card-header>
                 <mat-card-title>  
                     <span class="paymentFeedTitleNotImportant"> You donated ${{donations.donationAmount}} to </span> 
-                    <span class="paymentFeedTitleNonprofitName">{{donations.orgName}}</span> 
+                    <span class="paymentFeedTitleNonprofitName" (click)="navigateToNonprofit(donations.orgEIN)">{{donations.orgName}}</span> 
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content class="paymentFeedCardDescription">
